--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1 class="title">OwlPlan</h1>
     <div class="cadastrar">
+        <h3 style="color: white;">cadastre-se</h3>
         <div>
             <p>Insira seu Nome:</p>
             <input type="text" placeholder="Digite seu Nome" id="nome">
