adicionar front finalizado

--- a/html/historico.html
+++ b/html/historico.html
@@ -19,8 +19,12 @@
     </header>
     <main>
         <div class="conta">
-           <canvas id="graficoGanhos" width="400" height="200" class="grafico"></canvas>
+            
+           <canvas id="graficoGanhos" width="400" height="200" ></canvas>
         </div>
     </main>
+    <footer>
+        <button id="btnVerFatura">ver fatura</button>
+    </footer>
 </body>
 </html>
